@@ -1,0 +1,499 @@
+# All translations in this file are community made, this means there may be errors / missed translations, if you are able to improve upon any translation it would be greatly appreciated
+
+# Able to help with translations? Either improving a already existing language, or adding a whole new one. Join the discord server: https://discord.gg/JF9DNs3 
+# or message me on spigot: https://www.spigotmc.org/members/booksaw123.120955/
+
+# Any placeholders from placeholder API will work in this file
+
+# Credit for contributions to this file: xTomikk
+
+invalidArg: '&4Neplatne argumenty, napoveda'
+inTeam: '&4Musis byt v tymu, abys to mohl provest'
+internalError: '&4Pri provadeni tohoto prikazu doslo k chybe, prosim nahlaste to vlastnikum
+  serveru'
+notInTeam: '&4Musis opustit svuj tym predtim, nez toto provedes'
+needOwner: '&4Musis byt majitelem tymu, abys toto mohl udelat'
+needAdmin: '&4Musis byt adminem nebo majitelem tymu, abys toto mohl udelat'
+needPlayer: '&4Musis byt hracem, abys toto mohl udelat'
+noPlayer: '&4Zadany hrac nebyl nalezen'
+notTeam: '&6&4Tento tym neexistuje, zkus &b/team create <jmeno>'
+needSameTeam: '&6Nejsi ve stejnem tymu jako tato osoba'
+noPerm: '&4Nemas opravneni to udelat'
+prefixSyntax: '&7[%s&7] &r%s'
+bannedChar: '&4Znak, ktery jsi se pokusil pouzit, je zakazan'
+noTeam: '&4Tento tym neexistuje'
+loading: '&6Nacitani'
+cooldown:
+  wait: '&4Musis pockat dalsich %s sekund, nez to znovu zkusis!'
+cost:
+  tooPoor: '&4Jsi prilis chudy na to, abys mohl provest tento prikaz'
+  run: '&4&l-%s'
+placeholder:
+  noTeam: ''
+  noDescription: ''
+  money: '%s'
+  owner: Owner
+  admin: Admin
+  default: Default
+  name: '%s'
+  tag: '%s'
+  displayname: '%s'
+  inteam: 'true'
+  notinteam: 'false'
+  noTitle: ''
+prefix:
+  owner: ' **'
+  admin: ' *'
+  default: ' '
+create:
+  exists: '&6Tento tym jiz existuje'
+  success: '&6Vas tym byl vytvoren'
+  banned: '&4Tento nazev tymu je zakazan'
+  maxLength: '&4Tento nazev tymu je prilis dlouhy'
+leave:
+  success: '&6Opustil jsi tym'
+  lastOwner: '&6Jsi jedinym majitelem tymu. Bud povys nekoho jineho nebo pouzij &b/team
+    disband &6pro rozpusteni tymu.'
+rank:
+  noTeam: '&4Tym nenalezen'
+  info: '&6Pozice tymu:'
+  infos: '&6Hodnost tymu: &b%s &7(Potrebne body: %s pro dalsi postup)'
+  infom: '&6Hodnost tymu: &b%s &7(Penize: $%s potrebne pro dalsi postup)'
+  infomm: '&6Hodnost tymu: &b%s &7(Jsi na nejvyssi mozne hodnosti)'
+  syntax: '&b%s: &6%s &7(%s)'
+delhome:
+  success: '&6Domov vaseho tymu byl odstranen'
+  noHome: '&4Vas tym nema nastaveny domov'
+disband:
+  success: '&6Rozpustil jsi tym'
+  confirm: '&6Zadej &b/team disband &6znovu pro potvrzeni'
+description:
+  success: '&6Zmenil jsi popis tymu'
+  view: '&6Popis tymu: %s'
+  noDesc: '&6Popis tymu neni nastaven'
+  noPerm: '&4Nemas opravneni upravovat popis'
+name:
+  success: '&6Zmenil jsi nazev tymu'
+  view: '&6Nazev tymu: %s'
+  exists: '&4Tento tym jiz existuje'
+  noPerm: '&4Nemas opravneni zmenit nazev tymu'
+invite:
+  success: '&6Hrac byl pozvan'
+  invite: '&6Byl jsi pozvan k pripojeni se k tymu %s. Napis &b/team join <tym> &6pro
+    pripojeni k tymu.'
+  inTeam: '&6Tento hrac jiz je v tymu'
+  banned: '&6Tento hrac je z vaseho tymu zakazan'
+  full: '&6Vas tym ma maximalni pocet hracu, vyhodte nekoho pred pozvanim dalsich
+    lidi'
+  expired: '&4Pozvanka od hrace &b%s &4vyprsela'
+join:
+  success: '&6Pripojil jsi se k tomuto tymu'
+  notify: '&6Vitej, &b%s &6v tymu!'
+  notInvited: '&6&4Nejsi pozvan do tohoto tymu'
+  banned: '&6&4Jsi zakazan v tomto tymu'
+  full: '&4Tym je plny'
+open:
+  successopen: '&6Vas tym je nyni otevreny pro kazdeho'
+  successclose: '&6Vas tym je nyni pouze na pozvani'
+title:
+  change: '&6Nazev titulu byl zmenen na &b%s'
+  remove: '&6Nazev titulu byl odebran'
+  success: '&6Tento titul byl zmenen'
+  tooLong: '&4Tento titul je prilis dlouhy'
+  noFormat: '&4Nemas opravneni formatovat tituly'
+  noColor: '&4Nemas opravneni pouzivat barvy v titulech'
+  reset: '&6Tvuj titul byl obnoven'
+  noPerm: '&4Nemas opravneni zmenit titul tymu'
+info:
+  needTeam: '&6Tym nebo hrac s timto jmenem nebyl nalezen'
+  name: '&6Jmeno: &b%s'
+  description: '&6Popis: &b%s'
+  open: '&6Otevreny: &b%s'
+  level: '&6Uroven: &b%s'
+  owner: '&6Vlastnici: &b%s'
+  admin: '&6Admini: &b%s'
+  default: '&6Clenove: &b%s'
+  tag: '&6Tag: &b%s'
+  fail: '&6Tym nebo hrac s timto jmenem nebyl nalezen'
+  score: '&6Skore: &b%s'
+  money: '&6Stav uctu: &b%s'
+  ally: '&6Spojenci: &b%s'
+kick:
+  success: '&6Tento hrac byl vyhozen'
+  notify: '&6Byl jsi vyhozen z tymu %s'
+  title: '&4Byl jsi vyhozen z tymu'
+  noPerm: '&6Nemas opravneni vyhodit tuto osobu'
+ban:
+  success: '&6Tento hrac byl zabanovan'
+  notify: '&6Byl jsi zabanovan z tymu %s'
+  title: '&4Byl jsi zabanovan z tymu'
+  noPerm: '&6Nemas opravneni zabanovat tuto osobu'
+  already: '&6Tento hrac je jiz zabanovan'
+unban:
+  success: '&6Tento hrac byl odbanovan'
+  notify: '&6Byl jsi odbanovan z tymu %s'
+  noPerm: '&6Nemas opravneni odbanovat tuto osobu'
+  not: '&6Tento hrac neni zabanovan'
+promote:
+  success: '&6Tento hrac byl povysen'
+  noPerm: '&6Nemas opravneni povysit tuto osobu'
+  max: '&6Tato osoba je jiz povysena na maximum!'
+  notify: '&6Byl jsi povysen!'
+  maxAdmins: '&4Vas tym jiz dosahl maximalniho poctu adminu, povys nekoho nebo zvys
+    uroven tymu'
+  maxOwners: '&4Vas tym jiz dosahl maximalniho poctu majitelu, povys nekoho nebo zvys
+    uroven tymu'
+demote:
+  success: '&6Tento hrac byl degradovan'
+  noPerm: '&6Nemas opravneni degradovat tuto osobu'
+  min: '&6Tato osoba je jiz na nejnizsi urovni'
+  notify: '&6Byl jsi degradovan'
+  lastOwner: '&6Nemuzes degradovat posledniho majitele, nejprve povys nekoho dalsiho'
+  maxAdmins: '&4Vas tym jiz dosahl maximalniho poctu adminu, odeber nektereho z adminu
+    nebo zvys uroven tymu'
+home:
+  success: '&6Byl jsi prenesen'
+  noHome: '&6Vas tym nema nastaveny domov'
+  world: '&4Misto tohoto domova vaseho tymu nebylo nalezeno'
+sethome:
+  success: '&6Domov vaseho tymu byl nastaven'
+  noPerm: '&6Nemas dostatecnou uroven opravneni pro nastaveni domova tymu'
+chat:
+  enabled: '&6Tva zprava nyni jde do tymoveho chatu'
+  disabled: '&6Tva zprava nyni jde do globalniho chatu'
+  syntax: '&b[Tym]&f%s&f: %s'
+color:
+  success: '&6Barva vaseho tymu byla zmenena'
+  fail: '&6Toto neni rozpoznana barva chatu'
+  banned: '&4Muzes pouzivat pouze barvy, ne formatovaci kody'
+deposit:
+  tooLittle: '&4Nelze vkladat zaporne castky'
+  fail: '&4Vkladani selhalo'
+  success: '&6Penize byly vlozeny'
+  max: '&4Tim byste prekrocil vas maximalni povoleny zustatek tymu'
+withdraw:
+  tooLittle: '&4Nelze vybrat zaporne castky'
+  fail: '&4Vyber selhal'
+  success: '&6Penize vybrany'
+  notEnough: '&6Vas tym nema dostatek penez'
+ally:
+  already: '&4Jiz jste spojenci'
+  success: '&6Vase tymy jsou nyni spojenci'
+  ally: '&6Vas tym je nyni spojen s tymem &b%s'
+  requested: '&6Byla odeslana zadost o spojenectvi tomuto tymu'
+  request: '&b%s &6odeslal zadost o spojenectvi, pouzij &b/team ally <tym> &6pro
+    akceptaci'
+  self: '&4Nemuzete byt spojenci se svym vlastnim tymem'
+  from: '&6Mate zadosti o spojenectvi od: %s'
+  noRequests: '&4Nemate zadne zadosti o spojenectvi'
+  onJoin: '&6Mate nove zadosti o spojenectvi, pouzijte &b/team ally &6pro zobrazeni'
+  limit: '&4Dosahli jste limitu spojencu'
+  alreadyrequest: '&4Jiz jste pozadali o spojenectvi s timto tymem'
+allychat:
+  disabled: '&6Tva zprava jiz nebudou posilany do spojeneckeho chatu'
+  enabled: '&6Tva zprava nyni budou posilany do spojeneckeho chatu'
+  syntax: '&d[%s]&f%s&f: %s'
+neutral:
+  self: '&6To je vas vlastni tym'
+  requestremove: '&6Tato zadost o spojenectvi byla odstranena'
+  reject: '&4Vase zadost o spojenectvi s &b%s &4byla odmitnuta'
+  notAlly: '&4Nejste spojenci s timto tymem'
+  success: '&4Uz nejste spojenci s timto tymem'
+  remove: '&4Uz nejste spojenci s tymem &b%s'
+list:
+  noPage: '&6Tato stranka nebyla nalezena'
+  header: '&7--- &bStranka seznamu tymu %s &7---'
+  body: '&6%s: &b%s'
+  footer: '&7--- &6Napis &b/team list [stranka] &6pro zobrazeni vice &7---'
+setowner:
+  use: '&6Nemuzes povysit tohoto hrace, pouzij &b/team setowner <hrac> &6pro povyseni
+    tohoto hrace na majitele'
+  success: '&6Tento hrac je nyni majitelem'
+  notify: '&6Stal jsi se majitelem sveho tymu'
+  max: '&4Tento hrac je jiz majitelem'
+setwarp:
+  exist: '&4Tento warp jiz existuje'
+  max: '&4Vas tym jiz ma nastaven maximalni pocet warpu'
+  success: '&6Tento warp byl vytvoren'
+  char: '&4Nazev warpu obsahuje zakazane znaky'
+warp:
+  nowarp: '&4Tento warp neexistuje'
+  invalidPassword: '&4Neplatne heslo pro tento warp'
+  success: '&6Byl jsi prenesen'
+  world: '&4Misto tohoto warp nebylo nalezeno'
+warps:
+  syntax: '&6Warpy: &b%s'
+  none: '&4Vas tym nema nastavene zadne warpy'
+delwarp:
+  success: '&4Tento warp byl smazan'
+teleport:
+  fail: '&4Teleportace selhala'
+  wait: '&6Pockej &b%s &6sekund'
+chest:
+  claim:
+    noChest: '&4Nestojis na truhle'
+    limit: '&4Vas tym dosahl maximalniho poctu obsazenych truhel'
+    claimed: '&4Tato truhla byla jiz obsazena'
+    success: '&6Obsadil jsi tuto truhlu'
+  remove:
+    noChest: '&4Nestojis na truhle'
+    notClaimed: '&4Vas tym tuto truhlu neobsadil'
+    success: '&4Vas tym jiz nema narok na tuto truhlu'
+  all:
+    success: '&6Zrusena narokovani vsech truhel'
+  claimed: '&4Tato truhla je narokovana hracem &a%s'
+echest:
+  
+  echest: Enderchest
+pvp:
+  
+  enabled: '&6PvP bylo povoleno pro vas tym'
+  disabled: '&6PvP bylo zakazano pro vas tym'
+rankup:
+  
+  max: '&4Jiz jsi na nejvyssi urovni'
+  score: '&4Potrebujes %s skore pro postup na dalsi uroven'
+  money: '&4Potrebujes %s penez na uctu tymu pro postup na dalsi uroven'
+  success: '&6Vas tym se posunul na dalsi uroven'
+tag:
+  
+  banned: '&4Tento tag je zakazan'
+  success: '&6Tvuj tag byl uspesne zmenen'
+  maxLength: '&4Tento tag je prilis dlouhy'
+  noPerm: '&4Nemas opravneni zmenit tag tymu'
+admin:
+  cancel: '&4Prikaz byl zrusen jinym pluginem'
+  tag:
+    success: '&6Tag tohoto tymu byl uspesne zmenen'
+  setrank:
+    success: '&6Hodnost tohoto tymu byla nastavena'
+    'no': '&4Tato hodnost bud neexistuje, nebo neni spravne nastavena'
+  config:
+    
+    reload: '&6Byl proveden restart BetterTeams (Pokud mate problemy pri pouziti tohoto
+      prikazu, restartujte server)'
+  holo:
+    create:
+      success: '&6Hologram vytvoren'
+    remove:
+      noHolo: '&4Nebyly nalezeny zadne hologramy'
+      success: '&6Hologram byl smazan'
+  title:
+    success: '&6Nazev titulu teto osoby byl zmenen'
+    reset: '&6Titul teto osoby byl obnoven'
+  version: '&6Soucasna verze pluginu: &b%s'
+  versionstorage: '&6Zpusob ulozeni dat: &b%s'
+  versionversion: '&6Verze Minecraftu: &b%s'
+  versionlanguage: '&6Vybrany jazyk: &b%s'
+  noTeam: '&4To neni tym'
+  home:
+    success: '&6Byl jsi prenesen na domov tohoto tymu'
+    noHome: '&4Tento tym nema nastaveny domov'
+  name:
+    success: '&6Nazev tymu byl zmenen'
+  description:
+    success: '&6Nazev tohoto tymu byl zmenen'
+  open:
+    successopen: '&6Tento tym je nyni otevreny pro kazdeho'
+    successclose: '&6Tento tym je nyni pouze na pozvani'
+  invite:
+    success: '&6Tento hrac byl pozvan do tohoto tymu'
+  create:
+    success: '&6Tento tym byl vytvoren'
+  join:
+    banned: '&4Tento hrac je zakazan v tomto tymu'
+    success: '&6Tento hrac se pripojil k tymu'
+    notify: '&6Pripojil jsi se k tymu &b%s'
+    full: '&4Tym je plny'
+  notInTeam: '&6Tento hrac nemuze byt v tymu, nez toto provede'
+  inTeam: '&4Tento hrac neni v tymu'
+  leave:
+    success: '&6Tento hrac opustil tym'
+    notify: '&6Opustil jsi tento tym'
+  demote:
+    notify: '&6Byl jsi degradovan'
+    success: '&6Tento hrac byl degradovan'
+    min: '&4Tento hrac nemuze byt degradovan vice'
+    maxAdmins: '&4Tym jiz dosahl maximalniho poctu adminu, odeber jednoho pred degradaci
+      tohoto hrace'
+  promote:
+    max: '&6Tento hrac je jiz na nejvyssi urovni'
+    notify: '&6Byl jsi povysen'
+    success: '&6Tento hrac byl povysen'
+    owner: '&6Je nastaveno, ze tymy mohou mit pouze jednoho majitele, pouzij &b/teama
+      setowner <hrac> &6pro nastaveni hrace jako majitele'
+    maxAdmins: '&4Tym jiz dosahl maximalniho poctu adminu, odeber jednoho pred povysenim
+      tohoto hrace'
+    maxOwners: '&4Tym jiz dosahl maximalniho poctu majitelu, odeber jednoho pred povysenim
+      tohoto hrace'
+  setowner:
+    already: '&4Tento hrac je jiz majitelem'
+    nonotify: '&6Jiz nejsi majitelem tymu'
+    success: '&6Tento hrac je novym majitelem tymu'
+    notify: '&6Jsi nyni majitelem tymu'
+  warps:
+    none: '&4Tym nema nastaveny zadne warpy'
+  setwarp:
+    success: '&6Tento warp byl uspesne vytvoren'
+    max: '&6Tym jiz dosahl maximalniho poctu nastavenych warpu'
+  purge:
+    confirm: '&6Pro potvrzeni spust tento prikaz behem nasledujicich 10 sekund, &4TOTO
+      NELZE VRATIT A RESETUJE SKORE VSECH TYMU'
+    success: '&6Tymy byly uspesne vycisteny'
+  score:
+    tooSmall: '&4Skore musi byt vetsi nez 0'
+    success: '&6Skore tohoto tymu bylo zmeneno'
+  bal:
+    toSmall: '&4Zustatek musi byt vetsi nez 0'
+    success: '&6Zustatek tohoto tymu byl zmenen'
+  update: '&4Je dostupna nova verze pluginu BetterTeams. Aktualizujte zde: (https://www.spigotmc.org/resources/better-teams.17129/)'
+  disband:
+    success: '&6Tym byl uspesne rozpusten'
+  color:
+    success: '&6Barva tohoto tymu byla zmenena'
+  chest:
+    claim:
+      success: '&6Tuto truhlu jste zabrali jmenem tymu'
+    remove:
+      success: '&6Tato truhla byla uspesne odebrana'
+      notClaimed: '&4Zadny tym nezabral tuto truhlu'
+    all:
+      success: '&6Vsechny naroky byly odebrany tymu'
+    disable:
+      already: '&4Naroky na truhly jsou jiz zakazany'
+      success: '&6Naroky na truhly byly zakazany'
+    disabled:
+      bc: '&6&lVsechny zabrane truhly jsou nyni otevreny'
+    enable:
+      already: '&4Naroky na truhly jsou jiz povoleny'
+      success: '&6Naroky na truhly byly povoleny'
+    enabled:
+      bc: '&6&lVsechny zabrane truhly jsou nyni zamcene'
+  teleport:
+    success: '&6Vsichni online clenove tohoto tymu byli preneseni'
+nametag:
+  
+  syntax: '&6&l%s&r '
+holo:
+  leaderboard: '&6Zebricek'
+  syntax: '&6%s: &b%s'
+  msyntax: '&6%s: &b$%s'
+top:
+  leaderboard: '&6Zebricek'
+  syntax: '&b%s: &6%s &7(%s)'
+  divide: '&f...'
+baltop:
+  leaderboard: '&6Zebricek'
+  syntax: '&b%s: &6%s &7(%s)'
+  divide: '&f...'
+spy:
+  stop: '&6Uz nesledujes zpravy tymu'
+  start: '&6Nyni sledujes zpravy tymu'
+  team: '&7[&b%s&7]&f%s&f: %s'
+  ally: '&7[&d%s&7]&f%s&f: %s'
+uclaim:
+  
+  team: '&4Musis byt v tymu, aby sis mohl vytvorit narok'
+  member: '&4Nemuzes opustit narok sveho tymu'
+  kick: '&4Nemuzes vyhodit cleny sveho tymu z naroku'
+  ban: '&4Nemuzes zakazat cleny sveho tymu z naroku'
+  dissolve: '&4Tvuj tym byl rozpusten, takze se tvuj narok zrusil'
+help:
+  
+  description: Zobrazuje a meni popis vaseho tymu
+  ban: Zabanuje urceneho hrace z vaseho tymu
+  home: Teleportuje vas k domovu vaseho tymu
+  help: Zobrazi tuto stranku napovedy
+  promote: Povysi urceneho hrace ve vasem tymu
+  demote: Degraduje urceneho hrace ve vasem tymu
+  unban: Odbanuje urceneho hrace z vaseho tymu
+  kick: Vyhodi hrace z vaseho tymu
+  leave: Opusti vas soucasny tym
+  chat: Posle zpravu pouze do vaseho tymu
+  name: Zobrazuje a meni jmeno vaseho tymu
+  sethome: Nastavuje domov vaseho tymu
+  create: Vytvori tym s urcenym jmenem
+  invite: Pozve urceneho hrace do vaseho tymu
+  disband: Rozpusti vas soucasny tym
+  open: Prepne rezim tymu na pouze na pozvani
+  info: Zobrazuje informace o urcenem hraci / tymu
+  color: Meni barvu vaseho tymu
+  deposit: Vklada penize na ucet tymu
+  bal: Zobrazuje zustatek vaseho tymu
+  withdraw: Vybere penize z uctu tymu
+  title: Meni titul hrace ve vasem tymu
+  top: Zobrazuje nejlepsi tymy
+  rank: Zobrazuje hodnost tymu
+  join: Pripoji se k urcenemu tymu
+  delhome: Smaze domov vaseho tymu
+  ally: Slouzi k zadosti o spojenectvi s jinym tymem
+  neutral: Zrusi spojenectvi a odmitne zadosti o spojenectvi
+  allychat: Posle zpravu pouze vasim spojencum
+  echest: View your teams ender chest
+  setwarp: Set a warp for the rest of your team
+  warps: View a list of your teams warps
+  rankup: Rank your team up to get more perks
+  tag: Set your teams tag
+  delwarp: Delete that warp from your team
+  chest: ''
+  pvp: Toggle if pvp is enabled for your team
+  baltop: View the richest teams
+  list: Get a list of all teams on the server
+  warp: Warp to a location set by your team
+command:
+  
+  create: create
+  leave: leave
+  disband: disband
+  description: description
+  invite: invite
+  join: join
+  name: name
+  open: open
+  info: info
+  kick: kick
+  promote: promote
+  demote: demote
+  home: home
+  sethome: sethome
+  ban: ban
+  unban: unban
+  chat: chat
+  color: color
+  title: title
+  top: top
+  baltop: baltop
+  rank: rank
+  delhome: delhome
+  ally: ally
+  neutral: neutral
+  allychat: allychat
+  list: list
+  warp: warp
+  setwarp: setwarp
+  delwarp: delwarp
+  warps: warps
+  echest: echest
+  rankup: rankup
+  tag: tag
+  pvp: pvp
+  claim: claim
+  remove: remove
+  removeall: removeall
+  chest: chest
+  reload: reload
+  chatspy: chatspy
+  version: version
+  purge: purge
+  setrank: setrank
+  add: add
+  set: set
+  score: score
+  enableclaims: enableclaims
+  disableclaims: disableclaims
+  teleport: teleport
+  money: money
+  holo: holo
+  deposit: deposit
+  bal: bal
+  withdraw: withdraw
